# RCCN_Evolution

./: .gitignore  README.md  pyproject.toml
data/: README.md  topology_1.npy
examples/: run_small_evolution.py
scripts/: characterize_evolved_lags.py  cluster_runtime_probe.py  generate_ancestor_aging.py  phoenix_run_evolution_replicate.sh  run_evolution_replicate.py
src/rccn_evolution/: __init__.py  evolution.py  rccn.py
tests/: test_batched_against_old.py  test_core.py
