[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rccn-evolution"
version = "0.1.0"
description = "RCCN simulations and in-silico evolution for adaptive fragility and antibiotic tolerance."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Hagai Rappeport" }
]
dependencies = [
  "numpy>=1.23,<2",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
gpu = ["torch>=2"]
dev = ["pytest>=7", "torch>=2"]

[tool.setuptools.packages.find]
where = ["src"]
